--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -9,8 +9,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
-    <link rel="preload" href="/assets/fonts/georgia.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-    <link rel="preload" href="/assets/fonts/SegoeUI.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <!-- Preload Georgia -->
+    <link rel="preload" href="/assets/fonts/georgia.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+
+    <!-- Preload Segoe UI -->
+    <link rel="preload" href="/assets/fonts/SegoeUI.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+
 
     <!-- Desktop ≥ 941px -->
     <link
@@ -442,24 +446,24 @@
             <div class="thumbnails fancy-border-img">
               <picture class="github-container">
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/fetch/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_780/v1747140374/https://gennyallison.netlify.app/img/git-icon.webp"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/fetch/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_780/v1747140374/https://gennyallison.netlify.app/img/git-icon.webp"
                   type="image/avif"
                   media="(min-width: 1200px) 100vw"
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/fetch/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_916/v1747140374/https://gennyallison.netlify.app/img/git-icon.webp"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/fetch/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_916/v1747140374/https://gennyallison.netlify.app/img/git-icon.webp"
                   type="image/avif"
                   media="(min-width: 481px) and (max-width: 1199px) 100vw"
                   sizes="100vw"
                 />
                 <img 
-                  src="https://res.cloudinary.com/dnptzisuf/image/fetch/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_444/v1747140374/https://gennyallison.netlify.app/img/git-icon.webp"
+                  src="https://res.cloudinary.com/dnptzisuf/image/fetch/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_444/v1747140374/https://gennyallison.netlify.app/img/git-icon.webp"
                   alt="GitHub logo"
                   width="222"
                   height="189"
                   loading="auto"  
-                  style="aspect-ratio: 222 / 189; object-fit: cover;"
+                  style="aspect-ratio: 222 / 189; object-fit: contain;"
                   fetchpriority="auto"
                   decoding="async"
                 />
@@ -471,25 +475,25 @@
             <div class="thumbnails images fancy-border-img">
               <picture>
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,780/v1743469949/seo-grade_mmztmf.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,780/v1743469949/seo-grade_mmztmf.avif"
                   type="image/avif"
                   media="(min-width: 1200px) 100vw"
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_916/v1743469949/seo-grade_mmztmf.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_916/v1743469949/seo-grade_mmztmf.avif"
                   type="image/avif"
                   media="(min-width: 481px) and (max-width: 1199px) 100vw"
                   sizes="100vw"
                 />
                 <img 
-                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_444/v1743469949/seo-grade_mmztmf.avif"
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_444/v1743469949/seo-grade_mmztmf.avif"
                   alt="Tech Trends Blog SEO grade result showing performance and optimization"
                   width="222"
                   height="189"
                   loading="auto"  
                   fetchpriority="auto"
-                  style="aspect-ratio: 222 / 189; object-fit: cover;"
+                  style="aspect-ratio: 222 / 189; object-fit: contain;"
                   decoding="async"
                 />
               </picture>
@@ -500,25 +504,25 @@
             <div class="thumbnails fancy-border-img">
               <picture>
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_780/v1747144506/past-meets-future_pmafy7.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_780/v1747144506/past-meets-future_pmafy7.avif"
                   type="image/avif"
                   media="(min-width: 1200px) 100vw"
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_916/v1747144506/past-meets-future_pmafy7.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_916/v1747144506/past-meets-future_pmafy7.avif"
                   type="image/avif"
                   media="(min-width: 481px) and (max-width: 1199px) 100vw"
                   sizes="100vw"
                 />
                 <img 
-                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_444/v1747144506/past-meets-future_pmafy7.avif"
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_444/v1747144506/past-meets-future_pmafy7.avif"
                   alt="A design concept for Tech Trends Blog, merging past and future elements with modern and futuristic visuals."
                   width="222"
                   height="189"
                   loading="auto"  
                   fetchpriority="auto"
-                  style="aspect-ratio: 222 / 189; object-fit: cover;"
+                  style="aspect-ratio: 222 / 189; object-fit: contain;"
                   decoding="async" 
                 />
               </picture>
@@ -529,25 +533,25 @@
             <div class="thumbnails images fancy-border-img">
               <picture>
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_780/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_780/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
                   type="image/avif"
                   media="(min-width: 1200px) 100vw"
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_916/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,qq_40_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_916/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
                   type="image/avif"
                   media="(min-width: 481px) and (max-width: 1199px) 100vw"
                   sizes="100vw"
                 />
                 <img 
-                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_444/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_444/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
                   alt="Tech Trends Blog Hero Image showcasing a modern, AI-powered platform for technology insights"
                   width="222"
                   height="189"
                   loading="auto"  
                   fetchpriority="auto"
-                  style="aspect-ratio: 222 / 189; object-fit: cover;"
+                  style="aspect-ratio: 222 / 189; object-fit: contain;"
                   decoding="async" 
                 />
               </picture>
@@ -558,25 +562,25 @@
             <div class="thumbnails fancy-border-img">
               <picture>
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_780,/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_780,/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
                   type="image/avif"
                   media="(min-width: 1200px)"
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_916/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_916/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
                   type="image/avif"
                   media="(min-width: 481px) and (max-width: 1199px)"
                   sizes="100vw"
                 />
                 <img 
-                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_444/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_444/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
                   alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology vibes"
                   width="222"
                   height="189"
                   loading="auto"  
                   fetchpriority="auto"
-                  style="aspect-ratio: 222 / 189; object-fit: cover;"
+                  style="aspect-ratio: 222 / 189; object-fit: contain;"
                   decoding="async"
                 />
               </picture>
@@ -589,23 +593,23 @@
         <div class="author-bio-container fancy-border-img" id="author-bio">
           <picture> 
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_1400,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_1400,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
             />
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,w_820,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_820,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
               type="image/avif"
               media="(min-width: 481px) and (max-width: 1199px)"
               sizes="100vw"
             />
             <img 
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,w_594,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif" 
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_594,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif" 
               width="297" 
               height="148" 
               alt="Photo of Genny Allison, the web developer and AI content specialist"
-              style="aspect-ratio: 297 / 148; object-fit: cover;"
+              style="aspect-ratio: 297 / 148; object-fit: contain;"
               loading="auto" 
               decoding="async" 
             />
