--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -9,13 +9,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
-    <!-- Preload Georgia -->
-    <link rel="preload" href="/assets/fonts/georgia.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
-
-    <!-- Preload Segoe UI -->
-    <link rel="preload" href="/assets/fonts/SegoeUI.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
-
-
     <!-- Desktop ≥ 941px -->
     <link
       rel="preload"
@@ -222,15 +215,15 @@
       }
 
       .canvas-skills-title h1 {
-        font-size: clamp(1.5rem, 4.5vw, 2.5rem);
-        line-height: 1.4;
+        font-size: clamp(1.5rem, 4vw, 6rem);
+        line-height: 1.8;
         height: auto;
         overflow: hidden;
       }
 
       .canvas-skills-title h2 {
-        font-size: clamp(1.1rem, 3.5vw, 2rem);
-        line-height: 1.3;
+        font-size: clamp(1.1rem, 3vw, 3rem);
+        line-height: 1.5;
         height: auto;
         overflow: hidden;
       }
@@ -280,11 +273,11 @@
         }
 
         .canvas-skills-title h1 {
-          font-size: 1.4rem;
+          font-size: 2.2rem;
         }
 
         .canvas-skills-title h2 {
-          font-size: 1.1rem;
+          font-size: 1.5rem;
         }
       }
 
@@ -314,11 +307,13 @@
         }
 
         .canvas-skills-title h1 {
-          font-size: 1.2rem;
+          font-size: 1.8rem;
+          height: 8rem;
         }
 
         .canvas-skills-title h2 {
-          font-size: 1rem;
+          font-size: 1.3rem;
+          height: 4rem;
         }
       }
 
