small adjustments to fonts and removing contain: layout paint and will-change: transform from any titles

--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -9,6 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
+
+    <link rel="preload" as="font" href="/assets/fonts/georgia.woff2" type="font/woff2" crossorigin="anonymous">
+
     <!-- Desktop ≥ 941px -->
     <link
       rel="preload"
