removed fonts loaded, switched to system Georgia, removed .woff2

--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -10,8 +10,6 @@
 
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
 
-    <link rel="preload" as="font" href="/assets/fonts/georgia.woff2" type="font/woff2" crossorigin="anonymous">
-
     <!-- Desktop ≥ 941px -->
     <link
       rel="preload"
@@ -322,7 +320,7 @@
 
     </style>
   </head>
-    <body class="fonts-loading">
+    <body>
     <header>
       <nav role="navigation" aria-label="Main navigation">
         <div class="nav-logo">
@@ -416,7 +414,7 @@
     </header>
     <main class="about-me" id="projects">
       <div class="projects-placeholder" aria-hidden="true"></div>
-      <div class="projects-content fonts-loaded">
+      <div class="projects-content">
         <div class="resume-date fancy-border project-title" id="description">
           <h2>project 1 | the website</h2>
           <h2>tech trends</h2>
