further size adjustments

--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -24,7 +24,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_708/v1747860860/welcome_to_tech_trends_940_bgl09w.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_508/v1747860860/welcome_to_tech_trends_940_bgl09w.avif"
       type="image/avif"
       media="(min-width: 769px) and (max-width: 940px)"
       fetchpriority="high"
@@ -34,7 +34,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_606/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_728/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
       type="image/avif"
       media="(min-width: 481px) and (max-width: 768px)"
       fetchpriority="high"
@@ -150,7 +150,7 @@
         box-sizing: border-box;
         padding: 0.5rem;
         min-height: 300px;
-        max-height: 400px;
+        max-height: 435px;
         contain: layout paint style;
       }
       
@@ -164,13 +164,13 @@
         justify-content: center;
         background-color: #000;
         box-sizing: border-box;
-        aspect-ratio: 671 / 384;
+        aspect-ratio: 737 / 381;
       }
 
       .canvas-skills-grid img {
         width: 100%;
         height: auto;
-        object-fit: cover; /* keeps full image visible */
+        object-fit: cover;
         object-position: center;
         display: block;
         border-top: 1em solid #000;
@@ -238,17 +238,17 @@
       @media (min-width: 769px) and (max-width: 1024px) {
         .canvas-skills-grid {
           padding: 0.4rem;
-          min-height: 240px;
-          max-height: 323px;
+          min-height: 200px;
+          max-height: 300px;
         }
 
         .canvas-skills-grid img {
-          aspect-ratio: 388 / 294;
+          aspect-ratio: 388 / 224;
           border-width: 0.5em;
         }
 
         .canvas-skills-title {
-          min-height: 240px;
+          min-height: 200px;
           border-width: 0.5em;
         }
       }
@@ -256,7 +256,7 @@
       /* Mobile landscape & phablets: 481px–768px */
       @media (min-width: 481px) and (max-width: 768px) {
         .canvas-skills-grid {
-          min-height: 216px;
+          min-height: 180px;
           padding: 0.3rem;
         }
 
@@ -265,12 +265,12 @@
         }
 
         .canvas-skills-grid img {
-          aspect-ratio: 303 / 216;
+          aspect-ratio: 364 / 303;
           border-width: 0.5em;
         }
 
         .canvas-skills-title {
-          min-height: 216px;
+          min-height: 180px;
           padding: 0.5rem;
           border-width: 0.5em;
         }
@@ -287,13 +287,13 @@
       /* Smallest mobile screens ≤ 480px */
       @media (max-width: 480px) {
         .canvas-skills-grid {
-          min-height: 145px;
+          min-height: 200px;
           padding: 0.25rem;
         }
 
         .canvas-skills-grid picture {
-          min-width: 40%;
-          min-height: 139px;
+          min-width: 50%;
+          min-height: 200px;
         }
 
         .canvas-skills-grid img {
@@ -301,24 +301,38 @@
           width: 100%;
           height: auto;
           border-width: 0.5em;
-          aspect-ratio: 172 / 136; 
+          aspect-ratio: 236 / 200; 
           object-fit: cover;
         }
 
         .canvas-skills-title {
-          padding: 0.25rem;
-          min-height: 145px;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          min-height: 200px;
           border-width: 0.5em;
+          width: 50%;
+          max-width: 50vw;
+          padding-right: 0.7em;
         }
 
         .canvas-skills-title h1 {
-          font-size: 1.8rem;
-          height: 4rem;
+          font-size: 1.4rem;
+          height: 3rem;
+          width: 100%;
+          line-height: 1.5;
+          margin: 0 auto;
+          padding: 0;
         }
 
         .canvas-skills-title h2 {
           font-size: 1.3rem;
-          height: 4rem;
+          height: 3rem;
+          width: 100%;
+          line-height: 1;
+          margin: 0 auto;
+          padding: 0;
         }
       }
 
@@ -385,21 +399,21 @@
 
           <!-- Tablet 769px–940px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_708/v1747860860/welcome_to_tech_trends_940_bgl09w.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_400/v1747860860/welcome_to_tech_trends_940_bgl09w.avif"
             media="(min-width: 769px) and (max-width: 940px)"
             type="image/avif"
           />
 
           <!-- Mobile 481px–768px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_606/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_728/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
             media="(min-width: 481px) and (max-width: 768px)"
             type="image/avif"
           />
 
           <!-- Fallback ≤480px -->
           <img
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_344/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_354/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
             alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology vibes"
             width="172"
             height="136"
