--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -14,7 +14,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_383/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_400/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
       type="image/avif"
       media="(min-width: 941px)"
       fetchpriority="high"
@@ -24,7 +24,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_246/v1747860860/welcome_to_tech_trends_940_bgl09w.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_300/v1747860860/welcome_to_tech_trends_940_bgl09w.avif"
       type="image/avif"
       media="(min-width: 769px) and (max-width: 940px)"
       fetchpriority="high"
@@ -34,22 +34,21 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_356/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_375/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
       type="image/avif"
       media="(min-width: 481px) and (max-width: 768px)"
       fetchpriority="high"
     />
 
-    <!-- Fallback Mobile ≤480px -->
+    <!-- Mobile ≤480px -->
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_236/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_240/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
       type="image/avif"
       media="(max-width: 480px)"
       fetchpriority="high"
     />
-
 
     <link
       class="tab-logo"
@@ -465,19 +464,19 @@
             <div class="thumbnails fancy-border-img">
               <picture class="github-container">
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/fetch/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_518/v1747140374/https://gennyallison.netlify.app/img/git-icon.webp"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_518/v1748467140/github-icon_tie2av.avif"
                   type="image/avif"
                   media="(min-width: 1200px) 100vw"
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/fetch/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_402/v1747140374/https://gennyallison.netlify.app/img/git-icon.webp"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_402/v1748467140/github-icon_tie2av.avif"
                   type="image/avif"
                   media="(min-width: 481px) and (max-width: 1199px) 100vw"
                   sizes="100vw"
                 />
                 <img 
-                  src="https://res.cloudinary.com/dnptzisuf/image/fetch/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_238/v1747140374/https://gennyallison.netlify.app/img/git-icon.webp"
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_238/v1748467140/github-icon_tie2av.avif"
                   alt="GitHub logo"
                   width="119"
                   height="99"
@@ -496,13 +495,13 @@
                 <source
                   srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_518/v1743469949/seo-grade_mmztmf.avif"
                   type="image/avif"
-                  media="(min-width: 1200px) 100vw"
+                  media="(min-width: 1200px)"
                   sizes="100vw"
                 />
                 <source
                   srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_402/v1743469949/seo-grade_mmztmf.avif"
                   type="image/avif"
-                  media="(min-width: 481px) and (max-width: 1199px) 100vw"
+                  media="(min-width: 481px) and (max-width: 1199px)"
                   sizes="100vw"
                 />
                 <img 
@@ -525,13 +524,13 @@
                 <source
                   srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_518/v1747144506/past-meets-future_pmafy7.avif"
                   type="image/avif"
-                  media="(min-width: 1200px) 100vw"
+                  media="(min-width: 1200px)"
                   sizes="100vw"
                 />
                 <source
                   srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_402/v1747144506/past-meets-future_pmafy7.avif"
                   type="image/avif"
-                  media="(min-width: 481px) and (max-width: 1199px) 100vw"
+                  media="(min-width: 481px) and (max-width: 1199px)"
                   sizes="100vw"
                 />
                 <img 
@@ -554,13 +553,13 @@
                 <source
                   srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_518/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
                   type="image/avif"
-                  media="(min-width: 1200px) 100vw"
+                  media="(min-width: 1200px)"
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,qq_40_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_402/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_402/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
                   type="image/avif"
-                  media="(min-width: 481px) and (max-width: 1199px) 100vw"
+                  media="(min-width: 481px) and (max-width: 1199px)"
                   sizes="100vw"
                 />
                 <img 
@@ -733,9 +732,9 @@
             </li>
             <li>
               <a href="https://github.com/Allison2002" class="links" aria-label="Visit my GitHub profile" target="_blank" rel="noopener noreferrer">
-                <img src="/img/git-icon.webp" 
-                  alt="GitHub logo"width: 2.5rem;
-                  height: 2.5rem;
+                <img src="/img/github-icon.avif" 
+                  alt="GitHub logo"width: 5rem;
+                  height: 5rem;
                 >
               </a>
             </li>
