updated icon attributes

--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -709,6 +709,10 @@
                   alt="X (Twitter) logo"
                   width: 2.5rem;
                   height: 2.5rem;
+                  loading="auto"  
+                  style="aspect-ratio: 40 / 40; object-fit: contain;"
+                  fetchpriority="auto"
+                  decoding="async"
                 >
               </a>
             </li>
@@ -718,6 +722,10 @@
                   alt="Instagram logo"
                   width: 2.5rem;
                   height: 2.5rem;
+                  loading="auto"  
+                  style="aspect-ratio: 40 / 40; object-fit: contain;"
+                  fetchpriority="auto"
+                  decoding="async"
                 >
               </a>
             </li>
@@ -727,14 +735,23 @@
                   alt="LinkedIn logo"
                   width: 2.5rem;
                   height: 2.5rem;
+                  loading="auto"  
+                  style="aspect-ratio: 40 / 40; object-fit: contain;"
+                  fetchpriority="auto"
+                  decoding="async"
                 >
               </a>
             </li>
             <li>
               <a href="https://github.com/Allison2002" class="links" aria-label="Visit my GitHub profile" target="_blank" rel="noopener noreferrer">
                 <img src="/img/github-icon.avif" 
-                  alt="GitHub logo"width: 5rem;
-                  height: 5rem;
+                  alt="GitHub logo"
+                  width: 2.5rem;
+                  height: 2.5rem;
+                  loading="auto"  
+                  style="aspect-ratio: 40 / 40; object-fit: contain;"
+                  fetchpriority="auto"
+                  decoding="async"
                 >
               </a>
             </li>
